k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: benchmarker
  labels:
    name: benchmarker
    app.kubernetes.io/part-of: benchmarker
