k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: benchmarker-server
  namespace: benchmarker
  labels:
    app.kubernetes.io/name: benchmarker-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: benchmarker-server
  ports:
    - name: http
      port: 80
      targetPort: 4000
      protocol: TCP
